# g1_spinkick_example

./: README.md  pyproject.toml
notebooks/: g1_spinkick_example.ipynb
src/spinkick_example/: spinkick_env_cfg.py
