[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[project]
name = "spinkick-example"
version = "0.1.0"
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "Train a Unitree G1 humanoid to perform a double spin kick using mjlab"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    {name = "The MjLab Developers"},
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "mjlab",
    "ruff>=0.14.0",
]

[tool.uv.sources]
mjlab = { path = "../mjlab", editable = true }
mujoco-warp = { git = "https://github.com/google-deepmind/mujoco_warp", rev = "7c20a44bfed722e6415235792a1b247ea6b6a6d3"}

[tool.ruff]
indent-width = 2
src = ["spinkick_example"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ty>=0.0.1a26",
]

[project.entry-points."mjlab.tasks"]
  g1_spinkick = "spinkick_example"
